# pico-sdk-template

./: .gitignore  CMakeLists.txt  README.md  main.c  makefile
